--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,8 +1,8 @@
 version: "3.9"
 services:
-  krakenplay:
+  goodkraken:
     build: .
-    container_name: krakenplay_app
+    container_name: goodkraken_app
     ports:
       - "3000:3000"
     env_file:
